refactor(governance): 调整Hook规则并移除审计日志