@@ -3,45 +3,68 @@ package com.codingx.governance.application;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import com.codingx.governance.application.service.HookRuleService;
-import com.codingx.governance.domain.model.GovernanceHookAudit;
 import com.codingx.governance.domain.model.GovernanceHookRule;
-import com.codingx.governance.domain.repository.GovernanceHookAuditRepository;
 import com.codingx.governance.domain.repository.GovernanceHookRuleRepository;
-import java.util.ArrayList;
 import java.util.List;
 import org.junit.jupiter.api.Test;
 
 /**
- * 验证 Hook 生命周期规则只记录可审计事件，不直接执行外部副作用。
+ * 验证 Hook 生命周期规则作为自动化配置匹配器使用，不再依赖 Hook 审计持久化。
  */
 class HookRuleServiceTest {
 
     /**
-     * 启用的 Hook 规则命中触发点后应写入成功审计。
+     * 启用的 Hook 规则命中触发点和关键字后，应按排序返回给后续桌面通知或宠物联动执行器。
      */
     @Test
-    void triggerShouldWriteAuditForEnabledRule() {
-        InMemoryHookAuditRepository auditRepository = new InMemoryHookAuditRepository();
+    void triggerShouldReturnMatchedEnabledRulesInSortOrder() {
         HookRuleService service = new HookRuleService(
             new InMemoryHookRuleRepository(List.of(
                 GovernanceHookRule.builder()
                     .id(1L)
-                    .hookCode("before-tool-audit")
-                    .hookName("工具前审计")
-                    .triggerPoint("BEFORE_TOOL_CALL")
-                    .actionType("AUDIT")
+                    .hookCode("task-completed-pet")
+                    .hookName("任务完成宠物提示")
+                    .triggerPoint("TASK_COMPLETED")
+                    .conditionKeyword("编码")
+                    .actionType("PET_EVENT")
+                    .enabled(1)
+                    .sortNo(20)
+                    .build(),
+                GovernanceHookRule.builder()
+                    .id(2L)
+                    .hookCode("task-completed-notify")
+                    .hookName("任务完成桌面通知")
+                    .triggerPoint("TASK_COMPLETED")
+                    .actionType("DESKTOP_NOTIFY")
+                    .enabled(1)
+                    .sortNo(10)
+                    .build(),
+                GovernanceHookRule.builder()
+                    .id(3L)
+                    .hookCode("task-failed-notify")
+                    .hookName("任务失败桌面通知")
+                    .triggerPoint("TASK_FAILED")
+                    .actionType("DESKTOP_NOTIFY")
                     .enabled(1)
                     .sortNo(1)
+                    .build(),
+                GovernanceHookRule.builder()
+                    .id(4L)
+                    .hookCode("disabled-completed")
+                    .hookName("停用完成通知")
+                    .triggerPoint("TASK_COMPLETED")
+                    .actionType("DESKTOP_NOTIFY")
+                    .enabled(0)
+                    .sortNo(1)
                     .build()
-            )),
-            auditRepository
+            ))
         );
 
-        service.trigger("BEFORE_TOOL_CALL", 2001L, 3001L, "bash", "执行 git status");
+        List<GovernanceHookRule> matchedRules = service.trigger("TASK_COMPLETED", 2001L, 3001L, null, "编码任务已完成");
 
-        assertEquals(1, auditRepository.savedAudits.size());
-        assertEquals("before-tool-audit", auditRepository.savedAudits.getFirst().getHookCode());
-        assertEquals("SUCCESS", auditRepository.savedAudits.getFirst().getStatus());
+        assertEquals(2, matchedRules.size());
+        assertEquals("task-completed-notify", matchedRules.get(0).getHookCode());
+        assertEquals("task-completed-pet", matchedRules.get(1).getHookCode());
     }
 
     private record InMemoryHookRuleRepository(List<GovernanceHookRule> rules) implements GovernanceHookRuleRepository {
@@ -69,20 +92,6 @@ class HookRuleServiceTest {
 
         @Override
         public void softDeleteById(Long id) {
-        }
-    }
-
-    private static final class InMemoryHookAuditRepository implements GovernanceHookAuditRepository {
-        private final List<GovernanceHookAudit> savedAudits = new ArrayList<>();
-
-        @Override
-        public void save(GovernanceHookAudit audit) {
-            savedAudits.add(audit);
-        }
-
-        @Override
-        public List<GovernanceHookAudit> findRecent(int limit) {
-            return savedAudits;
         }
     }
 }
